v5.0.0/llms/components/ix-time-input.md
# ix-time-input

> No component summary available.

## Documentation

- https://ix.siemens.io//docs/components/input-time/guide.md

## Figma IDs

- 68801:5742

## Related examples

- range-field
  - angular: [../../examples/angular-examples/src/preview-examples/range-field.ts](../../examples/angular-examples/src/preview-examples/range-field.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/range-field.ts](../../examples/angular-standalone-examples/src/preview-examples/range-field.ts)
  - html: [../../examples/html-examples/src/preview-examples/range-field.html](../../examples/html-examples/src/preview-examples/range-field.html)
  - react: [../../examples/react-examples/src/preview-examples/range-field.tsx](../../examples/react-examples/src/preview-examples/range-field.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/range-field.vue](../../examples/vue-examples/src/preview-examples/range-field.vue)
- time-input
  - angular: [../../examples/angular-examples/src/preview-examples/time-input.html](../../examples/angular-examples/src/preview-examples/time-input.html), [../../examples/angular-examples/src/preview-examples/time-input.ts](../../examples/angular-examples/src/preview-examples/time-input.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/time-input.html](../../examples/angular-standalone-examples/src/preview-examples/time-input.html), [../../examples/angular-standalone-examples/src/preview-examples/time-input.ts](../../examples/angular-standalone-examples/src/preview-examples/time-input.ts)
  - html: [../../examples/html-examples/src/preview-examples/time-input.html](../../examples/html-examples/src/preview-examples/time-input.html)
  - react: [../../examples/react-examples/src/preview-examples/time-input.tsx](../../examples/react-examples/src/preview-examples/time-input.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/time-input.vue](../../examples/vue-examples/src/preview-examples/time-input.vue)
- time-input-disabled
  - angular: [../../examples/angular-examples/src/preview-examples/time-input-disabled.html](../../examples/angular-examples/src/preview-examples/time-input-disabled.html), [../../examples/angular-examples/src/preview-examples/time-input-disabled.ts](../../examples/angular-examples/src/preview-examples/time-input-disabled.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/time-input-disabled.html](../../examples/angular-standalone-examples/src/preview-examples/time-input-disabled.html), [../../examples/angular-standalone-examples/src/preview-examples/time-input-disabled.ts](../../examples/angular-standalone-examples/src/preview-examples/time-input-disabled.ts)
  - html: [../../examples/html-examples/src/preview-examples/time-input-disabled.html](../../examples/html-examples/src/preview-examples/time-input-disabled.html)
  - react: [../../examples/react-examples/src/preview-examples/time-input-disabled.tsx](../../examples/react-examples/src/preview-examples/time-input-disabled.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/time-input-disabled.vue](../../examples/vue-examples/src/preview-examples/time-input-disabled.vue)
- time-input-label
  - angular: [../../examples/angular-examples/src/preview-examples/time-input-label.html](../../examples/angular-examples/src/preview-examples/time-input-label.html), [../../examples/angular-examples/src/preview-examples/time-input-label.ts](../../examples/angular-examples/src/preview-examples/time-input-label.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/time-input-label.html](../../examples/angular-standalone-examples/src/preview-examples/time-input-label.html), [../../examples/angular-standalone-examples/src/preview-examples/time-input-label.ts](../../examples/angular-standalone-examples/src/preview-examples/time-input-label.ts)
  - html: [../../examples/html-examples/src/preview-examples/time-input-label.html](../../examples/html-examples/src/preview-examples/time-input-label.html)
  - react: [../../examples/react-examples/src/preview-examples/time-input-label.tsx](../../examples/react-examples/src/preview-examples/time-input-label.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/time-input-label.vue](../../examples/vue-examples/src/preview-examples/time-input-label.vue)
- time-input-readonly
  - angular: [../../examples/angular-examples/src/preview-examples/time-input-readonly.html](../../examples/angular-examples/src/preview-examples/time-input-readonly.html), [../../examples/angular-examples/src/preview-examples/time-input-readonly.ts](../../examples/angular-examples/src/preview-examples/time-input-readonly.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/time-input-readonly.html](../../examples/angular-standalone-examples/src/preview-examples/time-input-readonly.html), [../../examples/angular-standalone-examples/src/preview-examples/time-input-readonly.ts](../../examples/angular-standalone-examples/src/preview-examples/time-input-readonly.ts)
  - html: [../../examples/html-examples/src/preview-examples/time-input-readonly.html](../../examples/html-examples/src/preview-examples/time-input-readonly.html)
  - react: [../../examples/react-examples/src/preview-examples/time-input-readonly.tsx](../../examples/react-examples/src/preview-examples/time-input-readonly.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/time-input-readonly.vue](../../examples/vue-examples/src/preview-examples/time-input-readonly.vue)
- time-input-validation
  - angular: [../../examples/angular-examples/src/preview-examples/time-input-validation.html](../../examples/angular-examples/src/preview-examples/time-input-validation.html), [../../examples/angular-examples/src/preview-examples/time-input-validation.ts](../../examples/angular-examples/src/preview-examples/time-input-validation.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/time-input-validation.html](../../examples/angular-standalone-examples/src/preview-examples/time-input-validation.html), [../../examples/angular-standalone-examples/src/preview-examples/time-input-validation.ts](../../examples/angular-standalone-examples/src/preview-examples/time-input-validation.ts)
  - html: [../../examples/html-examples/src/preview-examples/time-input-validation.html](../../examples/html-examples/src/preview-examples/time-input-validation.html)
  - react: [../../examples/react-examples/src/preview-examples/time-input-validation.tsx](../../examples/react-examples/src/preview-examples/time-input-validation.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/time-input-validation.vue](../../examples/vue-examples/src/preview-examples/time-input-validation.vue)
- time-input-with-slots
  - angular: [../../examples/angular-examples/src/preview-examples/time-input-with-slots.html](../../examples/angular-examples/src/preview-examples/time-input-with-slots.html), [../../examples/angular-examples/src/preview-examples/time-input-with-slots.ts](../../examples/angular-examples/src/preview-examples/time-input-with-slots.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/time-input-with-slots.html](../../examples/angular-standalone-examples/src/preview-examples/time-input-with-slots.html), [../../examples/angular-standalone-examples/src/preview-examples/time-input-with-slots.ts](../../examples/angular-standalone-examples/src/preview-examples/time-input-with-slots.ts)
  - html: [../../examples/html-examples/src/preview-examples/time-input-with-slots.html](../../examples/html-examples/src/preview-examples/time-input-with-slots.html)
  - react: [../../examples/react-examples/src/preview-examples/time-input-with-slots.tsx](../../examples/react-examples/src/preview-examples/time-input-with-slots.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/time-input-with-slots.vue](../../examples/vue-examples/src/preview-examples/time-input-with-slots.vue)
- time-range
  - angular: [../../examples/angular-examples/src/preview-examples/time-range.ts](../../examples/angular-examples/src/preview-examples/time-range.ts)
  - angular-standalone: [../../examples/angular-standalone-examples/src/preview-examples/time-range.ts](../../examples/angular-standalone-examples/src/preview-examples/time-range.ts)
  - html: [../../examples/html-examples/src/preview-examples/time-range.html](../../examples/html-examples/src/preview-examples/time-range.html)
  - react: [../../examples/react-examples/src/preview-examples/time-range.tsx](../../examples/react-examples/src/preview-examples/time-range.tsx)
  - vue: [../../examples/vue-examples/src/preview-examples/time-range.vue](../../examples/vue-examples/src/preview-examples/time-range.vue)

## Related blocks

- unavailable (not present in registry JSON)

## Properties

- `ariaLabelTimeToggleButton`; attr: `aria-label-time-toggle-button`; type: `string | undefined`; default: `'Toggle time picker'` - ARIA label for the time picker toggle button Will be set as aria-label for the nested HTML button element
- `disabled`; attr: `disabled`; type: `boolean`; default: `false` - Disabled attribute.
- `enableTopLayer`; attr: `enable-top-layer`; type: `boolean`; default: `false` - Enable Popover API rendering for dropdown.
- `format`; attr: `format`; type: `string`; default: `'TT'` - Format of time string. See {@link https://moment.github.io/luxon/#/formatting?id=table-of-tokens} for all available tokens.
- `helperText`; attr: `helper-text`; type: `string | undefined` - Helper text below the input field.
- `hideHeader`; attr: `hide-header`; type: `boolean`; default: `false` - Hides the header of the picker.
- `hourInterval`; attr: `hour-interval`; type: `number`; default: `1` - Interval for hour selection.
- `i18nErrorTimeUnparsable`; attr: `i18n-error-time-unparsable`; type: `string`; default: `'Time is not valid'` - I18n string for the error message when the time is not parsable.
- `i18nHourColumnHeader`; attr: `i18n-hour-column-header`; type: `string`; default: `'hr'` - Text for the time picker hour column header.
- `i18nMillisecondColumnHeader`; attr: `i18n-millisecond-column-header`; type: `string`; default: `'ms'` - Text for the time picker millisecond column header.
- `i18nMinuteColumnHeader`; attr: `i18n-minute-column-header`; type: `string`; default: `'min'` - Text for the time picker minute column header.
- `i18nSecondColumnHeader`; attr: `i18n-second-column-header`; type: `string`; default: `'sec'` - Text for the time picker second column header.
- `i18nSelectTime`; attr: `i18n-select-time`; type: `string`; default: `'Confirm'` - Text of the time picker confirm button.
- `i18nTime`; attr: `i18n-time`; type: `string`; default: `'Time'` - Text for the time picker top label.
- `infoText`; attr: `info-text`; type: `string | undefined` - Info text below the input field.
- `invalidText`; attr: `invalid-text`; type: `string | undefined` - Error text below the input field.
- `label`; attr: `label`; type: `string | undefined` - Label of the input field.
- `maxTime`; attr: `max-time`; type: `string | undefined` - Latest selectable time (`format` tokens). Invalid non-empty values are ignored.
- `millisecondInterval`; attr: `millisecond-interval`; type: `number`; default: `100` - Interval for millisecond selection.
- `minTime`; attr: `min-time`; type: `string | undefined` - Earliest selectable time (`format` tokens). Invalid non-empty values are ignored.
- `minuteInterval`; attr: `minute-interval`; type: `number`; default: `1` - Interval for minute selection.
- `name`; attr: `name`; type: `string | undefined` - Name of the input element.
- `placeholder`; attr: `placeholder`; type: `string | undefined` - Placeholder of the input element.
- `readonly`; attr: `readonly`; type: `boolean`; default: `false` - Readonly attribute.
- `required`; attr: `required`; type: `boolean | undefined` - Required attribute.
- `secondInterval`; attr: `second-interval`; type: `number`; default: `1` - Interval for second selection.
- `showTextAsTooltip`; attr: `show-text-as-tooltip`; type: `boolean | undefined` - Show text as tooltip.
- `suppressSubmitOnEnter`; attr: `suppress-submit-on-enter`; type: `boolean`; default: `false` - If false, pressing Enter will submit the form (if inside a form). Set to true to suppress submit on Enter.
- `textAlignment`; attr: `text-alignment`; type: `"end" | "start"`; default: `'start'` - Text alignment within the time input. 'start' aligns the text to the start of the input, 'end' aligns the text to the end of the input.
- `validText`; attr: `valid-text`; type: `string | undefined` - Valid text below the input field.
- `value`; attr: `value`; type: `string`; default: `''` - Value of the input element.
- `warningText`; attr: `warning-text`; type: `string | undefined` - Warning text below the input field.

## Events

- `ixChange` - Change event. Emitted when the time input loses focus and the value has changed.
- `validityStateChange` - Validation state change event. Emitted when the validation state changes.
- `valueChange` - Value change event. Emitted when the input value changes.

## Slots

- `end` - Element will be displayed at the end of the input
- `start` - Element will be displayed at the start of the input
